initial major changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Restaurant</a>
+                        <a class="navbar-brand" href="#">David's Bistro</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,7 +39,7 @@
                             <li><a class="navactive color_animation" href="#top">WELCOME</a></li>
                             <li><a class="color_animation" href="#story">ABOUT</a></li>
                             <li><a class="color_animation" href="#pricing">PRICING</a></li>
-                            <li><a class="color_animation" href="#beer">BEER</a></li>
+                            <li><a class="color_animation" href="#wine">WINE</a></li>
                             <li><a class="color_animation" href="#bread">BREAD</a></li>
                             <li><a class="color_animation" href="#featured">FEATURED</a></li>
                             <li><a class="color_animation" href="#reservation">RESERVATION</a></li>
@@ -53,8 +53,8 @@
         <div id="top" class="starter_container bg">
             <div class="follow_container">
                 <div class="col-md-6 col-md-offset-3">
-                    <h2 class="top-title"> Restaurant</h2>
-                    <h2 class="white second-title">" Best in the city "</h2>
+                    <h2 class="top-title"> David's Bistro</h2>
+                    <h2 class="white second-title">" Fine French Cuisine in the Heart of London "</h2>
                     <hr>
                 </div>
             </div>
@@ -67,15 +67,16 @@
                 <div class="col-md-6">
                     <h1>About us</h1>
                     <div class="fa fa-cutlery fa-2x"></div>
-                    <p class="desc-text">Restaurant is a place for simplicity. Good food, good beer, and good service. Simple is the name of the game, and we’re good at finding it in all the right places, even in your dining experience. We’re a small group from Denver, Colorado who make simple food possible. Come join us and see what simplicity tastes like.</p>
+                    <p class="desc-text">David’s Bistro was opened in 1998 by David Chapman. After being Chef, and then Chef Owner of Anthony’s Seafood Bistro for 18 years, David decided to start over again and open a traditional style French bistro with the emphasis on not just seafood, but all aspects of food. With a daily prix fixe menu, regular menu, and daily features, there is a constantly changing selection. An extensive and sensibly priced wine list, with chalkboard additions, and everything served by the glass or bottle, the wine lover is well taken care of. </p><br/>
+                    <p class="desc-text">David and his daughter Natalie are your hosts, and look forward to your visit.</p>
                 </div>
                 <div class="col-md-6">
                     <div class="img-section">
-                       <img src="images/kabob.jpg" width="250" height="220">
-                       <img src="images/limes.jpg" width="250" height="220">
+                       <img src="images/redwine.jpg" width="250" height="220">
+                       <img src="images/salmon.jpg" width="250" height="220">
                        <div class="img-section-space"></div>
-                       <img src="images/radish.jpg"  width="250" height="220">
-                       <img src="images/corn.jpg"  width="250" height="220">
+                       <img src="images/food1.jpg"  width="250" height="220">
+                       <img src="images/whitewine.jpg"  width="250" height="220">
                    </div>
                 </div>
             </div>
@@ -95,36 +96,31 @@
                         <div id="w">
                             <ul id="filter-list" class="clearfix">
                                 <li class="filter" data-filter="all">All</li>
-                                <li class="filter" data-filter="breakfast">Breakfast</li>
-                                <li class="filter" data-filter="special">Special</li>
-                                <li class="filter" data-filter="desert">Desert</li>
                                 <li class="filter" data-filter="dinner">Dinner</li>
+                                <li class="filter" data-filter="lunch">Lunch</li>
+                                <li class="filter" data-filter="wine">Wine</li>
                             </ul><!-- @end #filter-list -->    
                             <ul id="portfolio">
-                                <li class="item breakfast"><img src="images/food_icon01.jpg" alt="Food" >
+                                <li class="item dinner"><img src="images/food1.jpg" alt="Food" >
                                     <h2 class="white">$20</h2>
                                 </li>
-
-                                <li class="item dinner special"><img src="images/food_icon02.jpg" alt="Food" >
+                                <li class="item dinner"><img src="images/food2.jpg" alt="Food" >
                                     <h2 class="white">$20</h2>
                                 </li>
-                                <li class="item dinner breakfast"><img src="images/food_icon03.jpg" alt="Food" >
-                                    <h2 class="white">$18</h2>
+                                <li class="item lunch"><img src="images/lamb.jpg" alt="Food" >
+                                    <h2 class="white">$11</h2>
                                 </li>
-                                <li class="item special"><img src="images/food_icon04.jpg" alt="Food" >
+                                <li class="item dinner"><img src="images/salmon.jpg" alt="Food" >
+                                    <h2 class="white">$11</h2>
+                                </li>
+                                <li class="item dinner"><img src="images/salmon.jpg" alt="Food" >
+                                    <h2 class="white">$11</h2>
+                                </li>
+                                <li class="item wine"><img src="images/whitewine.jpg" alt="Food" >
                                     <h2 class="white">$15</h2>
                                 </li>
-                                <li class="item dinner"><img src="images/food_icon05.jpg" alt="Food" >
+                                <li class="item wine"><img src="images/redwine.jpg" alt="Food" >
                                     <h2 class="white">$20</h2>
-                                </li>
-                                <li class="item special"><img src="images/food_icon06.jpg" alt="Food" >
-                                    <h2 class="white">$22</h2>
-                                </li>
-                                <li class="item desert"><img src="images/food_icon07.jpg" alt="Food" >
-                                    <h2 class="white">$32</h2>
-                                </li>
-                                <li class="item desert breakfast"><img src="images/food_icon08.jpg" alt="Food" >
-                                    <h2 class="white">$38</h2>
                                 </li>
                             </ul><!-- @end #portfolio -->
                         </div><!-- @end #w -->
@@ -137,21 +133,21 @@
         <!-- ============ Our Beer  ============= -->
 
 
-        <section id ="beer" class="description_content">
+        <section id ="wine" class="description_content">
             <div  class="beer background_content">
                 <h1>Great <span>Place</span> to enjoy</h1>
             </div>
             <div class="text-content container"> 
                 <div class="col-md-5">
                    <div class="img-section">
-                       <img src="images/beer_spec.jpg" width="100%">
+                       <img src="images/whitewine.jpg" width="100%">
                    </div>
                 </div>
                 <br>
                 <div class="col-md-6 col-md-offset-1">
-                    <h1>OUR BEER</h1>
+                    <h1>OUR WINE</h1>
                     <div class="icon-beer fa-2x"></div>
-                    <p class="desc-text">Here at Restaurant we’re all about the love of beer. New and bold flavors enter our doors every week, and we can’t help but show them off. While we enjoy the classics, we’re always passionate about discovering something new, so stop by and experience our craft at its best.</p>
+                    <p class="desc-text">Here at Restaurant we’re all about the love of wine. New and bold flavors enter our doors every week, and we can’t help but show them off. While we enjoy the classics, we’re always passionate about discovering something new, so stop by and experience our craft at its best.</p>
                 </div>
             </div>
         </section>
@@ -162,13 +158,13 @@
 
         <section id="bread" class=" description_content">
             <div  class="bread background_content">
-                <h1>Our Breakfast <span>Menu</span></h1>
+                <h1>Our Passion at your <span>Service</span></h1>
             </div>
             <div class="text-content container"> 
                 <div class="col-md-6">
-                    <h1>OUR BREAD</h1>
+                    <h1>OUR COMMITMENT</h1>
                     <div class="icon-bread fa-2x"></div>
-                    <p class="desc-text">We love the smell of fresh baked bread. Each loaf is handmade at the crack of dawn, using only the simplest of ingredients to bring out smells and flavors that beckon the whole block. Stop by anytime and experience simplicity at its finest.</p>
+                    <p class="desc-text">Our commitment to the quality of your experience and meal is second to none.  Come experience traidtional french cuisine at its finest.</p>
                 </div>
                 <div class="col-md-6">
                     <img src="images/bread1.jpg" width="260" alt="Bread">
@@ -298,14 +294,14 @@
                     <span class="social_heading">FOLLOW</span>
                     <ul class="social_icons">
                         <li><a class="icon-twitter color_animation" href="#" target="_blank"></a></li>
-                        <li><a class="icon-github color_animation" href="#" target="_blank"></a></li>
+                        <!--<li><a class="icon-github color_animation" href="#" target="_blank"></a></li>
                         <li><a class="icon-linkedin color_animation" href="#" target="_blank"></a></li>
-                        <li><a class="icon-mail color_animation" href="#"></a></li>
+                        <li><a class="icon-mail color_animation" href="#"></a></li>-->
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <span class="social_heading">OR DIAL</span>
-                    <span class="social_info"><a class="color_animation" href="tel:883-335-6524">(941) 883-335-6524</a></span>
+                    <span class="social_info"><a class="color_animation" href="tel:519-667-0535">(519) 667-0535</a></span>
                 </div>
             </div>
         </section>
@@ -314,7 +310,7 @@
 
         <section id="contact">
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.664063989472!2d91.8316103150038!3d24.909437984030877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37505558dd0be6a1%3A0x65c7e47c94b6dc45!2sTechnext!5e0!3m2!1sen!2sbd!4v1444461079802" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2918.7055731140053!2d-81.25189448415604!3d42.98447540343085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef21d2565f373%3A0x18af09e0bd77cc6b!2s432+Richmond+St%2C+London%2C+ON+N6A+3C9!5e0!3m2!1sen!2sca!4v1497212032449" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="container">
                 <div class="row">
