fix salmon images

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <li class="item lunch"><img src="images/lamb.jpg" alt="Food" >
                                     <h2 class="white">$11</h2>
                                 </li>
-                                <li class="item dinner"><img src="images/salmon.jpg" alt="Food" >
+                                <li class="item dinner"><img src="images/salmon.JPG" alt="Food" >
                                     <h2 class="white">$11</h2>
                                 </li>
                                 <li class="item dinner"><img src="images/salmon.jpg" alt="Food" >
