--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="col-md-6">
                     <div class="img-section">
                        <img src="images/redwine.jpg" width="250" height="220">
-                       <img src="images/salmon.jpg" width="250" height="220">
+                       <img src="images/salmon.JPG" width="250" height="220">
                        <div class="img-section-space"></div>
                        <img src="images/food1.jpg"  width="250" height="220">
                        <img src="images/whitewine.jpg"  width="250" height="220">
@@ -113,7 +113,7 @@
                                 <li class="item dinner"><img src="images/salmon.JPG" alt="Food" >
                                     <h2 class="white">$11</h2>
                                 </li>
-                                <li class="item dinner"><img src="images/salmon.jpg" alt="Food" >
+                                <li class="item dinner"><img src="images/salmon.JPG" alt="Food" >
                                     <h2 class="white">$11</h2>
                                 </li>
                                 <li class="item wine"><img src="images/whitewine.jpg" alt="Food" >
