--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">David's Lunch Spot</a>
+                        <a class="navbar-brand" href="#">David's Bistro</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,7 +53,7 @@
         <div id="top" class="starter_container bg">
             <div class="follow_container">
                 <div class="col-md-6 col-md-offset-3">
-                    <h2 class="top-title"> David's Lunch Spot</h2>
+                    <h2 class="top-title"> David's Bistro</h2>
                     <h2 class="white second-title">" Fine French Cuisine in the Heart of London "</h2>
                     <hr>
                 </div>
