Add load test 2

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
     <head>
@@ -53,7 +53,7 @@
         <div id="top" class="starter_container bg">
             <div class="follow_container">
                 <div class="col-md-6 col-md-offset-3">
-                    <h2 class="top-title"> David's Bistro</h2>
+                    <h2 class="top-title"> David's Bistro Load Test</h2>
                     <h2 class="white second-title">" Fine French Cuisine in the Heart of London "</h2>
                     <hr>
                 </div>
